Use timestamp for ListProgress cursor
