# rewynd-common/src/main/kotlin/io/rewynd/common/model/UserProgress.kt
@@ -1,6 +1,7 @@
 package io.rewynd.common.model
 
 import io.rewynd.model.Progress
+import kotlinx.datetime.Instant
 import kotlinx.serialization.Serializable
 
 @Serializable
@@ -8,7 +9,7 @@ data class UserProgress(
     val username: String,
     val id: String,
     val percent: Double,
-    val timestamp: Double,
+    val timestamp: Instant,
 ) {
     fun toProgress() =
         Progress(
